--- a/foodproject/foods/templates/foods/offer_list.html
+++ b/foodproject/foods/templates/foods/offer_list.html
@@ -123,7 +123,7 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-12">
                         <div class="section__title service__align--left">
-                            <h2 class="title__line">Search for deals by delivery service</h2>
+                            <h2 class="title__line">Search for deals by delivery service.</h2>
                         </div>
                     </div>
                 </div>
