added react file for zip search

--- a/foodproject/foods/templates/foods/offer_list.html
+++ b/foodproject/foods/templates/foods/offer_list.html
@@ -34,6 +34,9 @@
         }
     </style>
 </head>
+<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+<script src="{$ static 'zip_search.js' %}"></script>
 
 <body>
     <!--[if lte IE 9]>
@@ -99,8 +102,8 @@
                                     <div class="slider__inner">
                                         <h2>“AAHAR”</h2>
                                         <h1>food delivery & service</h1>
-                                        <div class="slider__input">
-                                            <input type="text" placeholder="Type Place, City.Division">
+                                        <div class="slider__input" id="zip_search">
+                                            <input type="text" placeholder="Enter a zip code">
                                             <input class="res__search" type="text" placeholder="Restaurant">
                                             <div class="src__btn">
                                                 <a href="#">Search</a>
